--- a/package.json
+++ b/package.json
@@ -3,11 +3,11 @@
   "version": "0.0.1",
   "private": true,
   "dependencies": {
+    "@capacitor/android": "3.5.0",
     "@capacitor/app": "1.0.2",
     "@capacitor/core": "^3.4.3",
     "@capacitor/geolocation": "^1.3.1",
     "@capacitor/haptics": "1.0.2",
-    "@capacitor/ios": "^3.1.1",
     "@capacitor/keyboard": "1.0.2",
     "@capacitor/status-bar": "1.0.2",
     "@ionic/pwa-elements": "^3.0.2",
@@ -33,7 +33,6 @@
     "react-dom": "^17.0.2",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "^5.0.0",
     "reselect": "^4.0.0",
     "typescript": "^4.1.3",
     "web-vitals": "^0.2.4",
@@ -75,7 +74,8 @@
     ]
   },
   "devDependencies": {
-    "@capacitor/cli": "3.1.1"
+    "@capacitor/cli": "3.1.1",
+    "react-scripts": "5.0.1"
   },
   "description": "An Ionic project"
 }
